tests/errors/E039.zen
struct double {
    triple: struct triple,
}

void main() {
    let x: struct triple = 1;
}